--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -29,15 +29,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Dialogflow Messenger integration -->
+      <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+      <df-messenger
+        intent="WELCOME"
+        chat-title="websitechatbot"
+        agent-id="73160b2d-4250-47c7-b61d-96c21806a7dd"
+        language-code="en"
+      ></df-messenger>
   </body>
 </html>
